--- a/sub3/sub3_3.html
+++ b/sub3/sub3_3.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
   <title>sub3_3</title>
-    <!-- common -->
-    <link rel="stylesheet" href="../assets/css/common.css" />
-    <!-- reset -->
-    <link rel="stylesheet" href="../assets/css/reset.css" />
-    <!-- ani -->
-    <link rel="stylesheet" href="../assets/css/ani.css" />
-    <!-- fonts -->
-    <link rel="stylesheet" href="../assets/css/fonts.css" />
-    <!-- favicon -->
-    <link rel="icon" href="../assets/common_images/favicon.png" />
-    <!-- css -->
-    <link rel="stylesheet" href="./sub3_3.css" />
-    <!-- pc -->
-    <link rel="stylesheet" href="./sub3_3pc.css" media="(width >= 1200px)" />
-    <script defer src="./sub3_3pc.js"></script>
+  <!-- common -->
+  <link rel="stylesheet" href="../assets/css/common.css" />
+  <!-- reset -->
+  <link rel="stylesheet" href="../assets/css/reset.css" />
+  <!-- ani -->
+  <link rel="stylesheet" href="../assets/css/ani.css" />
+  <!-- fonts -->
+  <link rel="stylesheet" href="../assets/css/fonts.css" />
+  <!-- favicon -->
+  <link rel="icon" href="../assets/common_images/favicon.png" />
+  <!-- css -->
+  <link rel="stylesheet" href="./sub3_3.css" />
+  <!-- pc -->
+  <link rel="stylesheet" href="./sub3_3pc.css" media="(width >= 1200px)" />
+  <script defer src="./sub3_3pc.js"></script>
 </head>
 
 <body>
@@ -28,7 +28,9 @@
     <!-- header -->
     <header class="head">
       <div class="wrap">
-        <img src="../assets/common_images/logo.svg" alt="부산스토리텔링협의회" />
+        <a href="../index/index.html">
+          <img src="../assets/common_images/logo.svg" alt="부산스토리텔링협의회" />
+        </a>
         <!-- 햄버거 아이콘 -->
         <input type="checkbox" id="icon" />
         <label for="icon">
@@ -49,27 +51,17 @@
             <li><a href="#">북구 아카이브</a></li>
             <li><a href="../sub2/sub2.html">북구 스토리 탐방대</a></li>
             <li class="story_menu_down">
-              <a href="#"
-                >나의 북구 이야기<img
-                  src="../assets/common_images/ic-arrow2.svg"
-                  alt="arrow"
-                  class="arrow"
-              /></a>
+              <a href="../sub3/sub3_1.html">나의 북구 이야기<img src="../assets/common_images/ic-arrow2.svg" alt="arrow"
+                  class="arrow" /></a>
               <ul class="sub_menu">
                 <li>
-                  <a href="./sub3_1.html" title="최우수상"
-                    >최우수상</a
-                  >
+                  <a href="./sub3_1.html" title="최우수상">최우수상</a>
                 </li>
                 <li>
-                  <a href="./sub3_2.html" title="우수상"
-                    >우수상</a
-                  >
+                  <a href="./sub3_2.html" title="우수상">우수상</a>
                 </li>
                 <li>
-                  <a href="./sub3_3.html" title="장려상"
-                    >장려상</a
-                  >
+                  <a href="./sub3_3.html" title="장려상">장려상</a>
                 </li>
               </ul>
             </li>
@@ -232,9 +224,7 @@
     </section>
     <!-- footer -->
     <footer class="foot">
-      <a href="#wrap" class="btn_top"
-        ><img src="../assets/common_images/ic-arrow.svg" alt="allow_up"
-      /></a>
+      <a href="#wrap" class="btn_top"><img src="../assets/common_images/ic-arrow.svg" alt="allow_up" /></a>
       <div class="info">
         <span>제 10회 부산스토리텔링축제</span>
         <h2>북구 늴리리</h2>
@@ -257,16 +247,8 @@
             <p class="email">E. bsstory@storybusan.com</p>
           </div>
           <div class="footer_copy">
-            <a
-              href="http://busanstory.koweb.co.kr/contents/10_privacy/sub01.html "
-              title="개인정보"
-              >개인정보처리방침</a
-            >
-            <a
-              href="http://busanstory.koweb.co.kr/contents/10_privacy/sub02.html"
-              title="이용약관"
-              >이용약관</a
-            >
+            <a href="http://busanstory.koweb.co.kr/contents/10_privacy/sub01.html " title="개인정보">개인정보처리방침</a>
+            <a href="http://busanstory.koweb.co.kr/contents/10_privacy/sub02.html" title="이용약관">이용약관</a>
             <p>Copyright ⓒ 부산스토리텔링협의회. All rights reserved.</p>
           </div>
         </div>
